Создал меню ( недоработано масштабирование), добавил шрифты

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -13,7 +13,11 @@
     <None Remove="castle_1.jpeg" />
     <None Remove="Icon.jpeg" />
     <None Remove="Player.png" />
+    <None Remove="Sound\Music\MainMenuTheme.wav" />
+    <None Remove="Texture\Parallax\MainMenu.png" />
+    <None Remove="Texture\Parallax\MainMenuBackground.png" />
     <None Remove="Texture\SplashScreen\SplashScreen.png" />
+    <None Remove="Texture\UI\logo.png" />
     <None Remove="_707f8fda-5d8b-476e-9f95-de6929f38bc1 %281%29.jpeg" />
     <None Remove="_815ec1da-917b-4f0f-a757-5f725b962ccf.jpeg" />
     <None Remove="_b47ee9b5-c19f-4b67-990e-a9f857cfd794 %281%29.jpeg" />
@@ -24,6 +28,14 @@
     <Resource Include="castle_1.jpeg" />
     <Resource Include="Icon.jpeg" />
     <Resource Include="Player.png" />
+    <Resource Include="Sound\Music\MainMenuTheme.wav" />
+    <Resource Include="Texture\Parallax\MainMenu.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Texture\Parallax\MainMenuBackground.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Texture\UI\logo.png" />
     <Resource Include="_707f8fda-5d8b-476e-9f95-de6929f38bc1 (1).jpeg" />
     <Resource Include="_815ec1da-917b-4f0f-a757-5f725b962ccf.jpeg" />
     <Resource Include="_b47ee9b5-c19f-4b67-990e-a9f857cfd794 (1).jpeg" />
