--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <None Remove="castle_1.jpeg" />
+    <None Remove="font\en.ttf" />
+    <None Remove="font\Ru.otf" />
     <None Remove="Icon.jpeg" />
     <None Remove="Player.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
@@ -21,6 +23,8 @@
 
   <ItemGroup>
     <Resource Include="castle_1.jpeg" />
+    <Resource Include="font\en.ttf" />
+    <Resource Include="font\Ru.otf" />
     <Resource Include="Icon.jpeg" />
     <Resource Include="Player.png" />
     <Resource Include="Sound\Music\MainMenuTheme.wav" />
