Починил воспроизведение музыки в главном меню

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -24,7 +24,9 @@
   <ItemGroup>
     <Resource Include="castle_1.jpeg" />
     <Resource Include="font\en.ttf" />
-    <Resource Include="font\Ru.otf" />
+    <Resource Include="font\Ru.otf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Icon.jpeg" />
     <Resource Include="Player.png" />
     <Resource Include="Sound\Music\MainMenuTheme.wav" />
@@ -41,12 +43,6 @@
     <SplashScreen Include="Texture\SplashScreen\SplashScreen.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </SplashScreen>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Texture\Parallax\castle_1.jpeg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
