--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -15,9 +15,10 @@
     <None Remove="Icon.jpeg" />
     <None Remove="Player.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
+    <None Remove="Texture\background\Level\game_background_1.png" />
     <None Remove="Texture\Parallax\MainMenu.png" />
     <None Remove="Texture\Parallax\MainMenuBackground.png" />
-    <None Remove="Texture\SplashScreen\SplashScreen.png" />
+    <None Remove="Texture\UI\Game\HP\icon_hp.png" />
     <None Remove="Texture\UI\logo.png" />
   </ItemGroup>
 
@@ -30,19 +31,21 @@
     <Resource Include="Icon.jpeg" />
     <Resource Include="Player.png" />
     <Resource Include="Sound\Music\MainMenuTheme.wav" />
+    <Resource Include="Texture\background\Level\game_background_1.png" />
     <Resource Include="Texture\Parallax\MainMenu.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Texture\Parallax\MainMenuBackground.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Texture\UI\Game\HP\icon_hp.png" />
     <Resource Include="Texture\UI\logo.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <SplashScreen Include="Texture\SplashScreen\SplashScreen.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </SplashScreen>
+    <Folder Include="Texture\Mob\Enemy\" />
+    <Folder Include="Texture\SplashScreen\" />
+    <Folder Include="Game_classes\" />
   </ItemGroup>
 
 </Project>
