Переношу моба в класс, работаю с коллизией в классе, меняю логику генерации моба на локации

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -16,6 +16,7 @@
     <None Remove="Player.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
+    <None Remove="Texture\Objects\Furniture\Table.png" />
     <None Remove="Texture\Parallax\MainMenu.png" />
     <None Remove="Texture\Parallax\MainMenuBackground.png" />
     <None Remove="Texture\UI\Game\HP\icon_hp.png" />
@@ -32,6 +33,7 @@
     <Resource Include="Player.png" />
     <Resource Include="Sound\Music\MainMenuTheme.wav" />
     <Resource Include="Texture\background\Level\game_background_1.png" />
+    <Resource Include="Texture\Objects\Furniture\Table.png" />
     <Resource Include="Texture\Parallax\MainMenu.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
