--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -13,9 +13,13 @@
     <None Remove="font\en.ttf" />
     <None Remove="font\Ru.otf" />
     <None Remove="Icon.jpeg" />
-    <None Remove="Player.png" />
+    <None Remove="player_stand.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
+    <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
+    <None Remove="Texture\Mob\Player\player_left.png" />
+    <None Remove="Texture\Mob\Player\player_right.png" />
+    <None Remove="Texture\Mob\Player\player_stand.png" />
     <None Remove="Texture\Objects\Furniture\Table.png" />
     <None Remove="Texture\Parallax\MainMenu.png" />
     <None Remove="Texture\Parallax\MainMenuBackground.png" />
@@ -30,9 +34,13 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Icon.jpeg" />
-    <Resource Include="Player.png" />
+    <Resource Include="player_stand.png" />
     <Resource Include="Sound\Music\MainMenuTheme.wav" />
     <Resource Include="Texture\background\Level\game_background_1.png" />
+    <Resource Include="Texture\Mob\Enemy\Zombie\zombie_right.png" />
+    <Resource Include="Texture\Mob\Player\player_left.png" />
+    <Resource Include="Texture\Mob\Player\player_right.png" />
+    <Resource Include="Texture\Mob\Player\player_stand.png" />
     <Resource Include="Texture\Objects\Furniture\Table.png" />
     <Resource Include="Texture\Parallax\MainMenu.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -45,7 +53,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Texture\Mob\Enemy\" />
     <Folder Include="Texture\SplashScreen\" />
   </ItemGroup>
 
