Добавил 2 вида для зомби, исправил вид персонажа при движении ( вправо/влево, сделал переход на другой уровень, дорабатываю коллизию, дорабатываю строку здоровья

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -16,6 +16,7 @@
     <None Remove="player_stand.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
+    <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <None Remove="Texture\Mob\Player\player_left.png" />
     <None Remove="Texture\Mob\Player\player_right.png" />
@@ -37,6 +38,7 @@
     <Resource Include="player_stand.png" />
     <Resource Include="Sound\Music\MainMenuTheme.wav" />
     <Resource Include="Texture\background\Level\game_background_1.png" />
+    <Resource Include="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <Resource Include="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <Resource Include="Texture\Mob\Player\player_left.png" />
     <Resource Include="Texture\Mob\Player\player_right.png" />
