--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -18,6 +18,7 @@
     <None Remove="Texture\background\Level\game_background_1.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
+    <None Remove="Texture\Mob\Player\player_berserk.png" />
     <None Remove="Texture\Mob\Player\player_left.png" />
     <None Remove="Texture\Mob\Player\player_right.png" />
     <None Remove="Texture\Mob\Player\player_stand.png" />
@@ -40,6 +41,7 @@
     <Resource Include="Texture\background\Level\game_background_1.png" />
     <Resource Include="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <Resource Include="Texture\Mob\Enemy\Zombie\zombie_right.png" />
+    <Resource Include="Texture\Mob\Player\player_berserk.png" />
     <Resource Include="Texture\Mob\Player\player_left.png" />
     <Resource Include="Texture\Mob\Player\player_right.png" />
     <Resource Include="Texture\Mob\Player\player_stand.png" />
