--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Level\level2.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="castle_1.jpeg" />
     <None Remove="font\en.ttf" />
     <None Remove="font\Ru.otf" />
@@ -27,6 +31,14 @@
     <None Remove="Texture\Parallax\MainMenuBackground.png" />
     <None Remove="Texture\UI\Game\HP\icon_hp.png" />
     <None Remove="Texture\UI\logo.png" />
+    <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png" />
+    <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
+    <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
+    <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="Level\level2.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -54,9 +66,16 @@
     </Resource>
     <Resource Include="Texture\UI\Game\HP\icon_hp.png" />
     <Resource Include="Texture\UI\logo.png" />
+    <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
+    <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
+    <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Level\" />
     <Folder Include="Texture\SplashScreen\" />
   </ItemGroup>
 
