--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -9,10 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Level\level2.xaml.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="castle_1.jpeg" />
     <None Remove="font\en.ttf" />
     <None Remove="font\Ru.otf" />
@@ -24,11 +20,24 @@
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <None Remove="Texture\Mob\Player\player_berserk.png" />
     <None Remove="Texture\Mob\Player\player_left.png" />
+    <None Remove="Texture\Mob\Player\player_move_animation\Left\PlayerMoveLeftAnimation1.png" />
+    <None Remove="Texture\Mob\Player\player_move_animation\Left\PlayerMoveLeftAnimation2.png" />
+    <None Remove="Texture\Mob\Player\player_move_animation\Left\PlayerMoveLeftAnimation3.png" />
+    <None Remove="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation1.png" />
+    <None Remove="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation2.png" />
+    <None Remove="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
     <None Remove="Texture\Mob\Player\player_right.png" />
     <None Remove="Texture\Mob\Player\player_stand.png" />
     <None Remove="Texture\Objects\Furniture\Table.png" />
     <None Remove="Texture\Parallax\MainMenu.png" />
     <None Remove="Texture\Parallax\MainMenuBackground.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\Exit.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\ExitActive.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\Play.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\PlayActive.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\Player.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\Settings.png" />
+    <None Remove="Texture\UI\Button\ButtonMenu\SettingsActive.png" />
     <None Remove="Texture\UI\Game\HP\icon_hp.png" />
     <None Remove="Texture\UI\logo.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png" />
@@ -38,7 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Remove="Level\level2.xaml" />
+    <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,6 +64,11 @@
     <Resource Include="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <Resource Include="Texture\Mob\Player\player_berserk.png" />
     <Resource Include="Texture\Mob\Player\player_left.png" />
+    <Resource Include="Texture\Mob\Player\player_move_animation\Left\PlayerMoveLeftAnimation1.png" />
+    <Resource Include="Texture\Mob\Player\player_move_animation\Left\PlayerMoveLeftAnimation2.png" />
+    <Resource Include="Texture\Mob\Player\player_move_animation\Left\PlayerMoveLeftAnimation3.png" />
+    <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation1.png" />
+    <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation2.png" />
     <Resource Include="Texture\Mob\Player\player_right.png" />
     <Resource Include="Texture\Mob\Player\player_stand.png" />
     <Resource Include="Texture\Objects\Furniture\Table.png" />
@@ -64,6 +78,13 @@
     <Resource Include="Texture\Parallax\MainMenuBackground.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Texture\UI\Button\ButtonMenu\Exit.png" />
+    <Resource Include="Texture\UI\Button\ButtonMenu\ExitActive.png" />
+    <Resource Include="Texture\UI\Button\ButtonMenu\Play.png" />
+    <Resource Include="Texture\UI\Button\ButtonMenu\PlayActive.png" />
+    <Resource Include="Texture\UI\Button\ButtonMenu\Player.png" />
+    <Resource Include="Texture\UI\Button\ButtonMenu\Settings.png" />
+    <Resource Include="Texture\UI\Button\ButtonMenu\SettingsActive.png" />
     <Resource Include="Texture\UI\Game\HP\icon_hp.png" />
     <Resource Include="Texture\UI\logo.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png">
