--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -40,6 +40,7 @@
     <None Remove="Texture\UI\Button\ButtonMenu\SettingsActive.png" />
     <None Remove="Texture\UI\Game\HP\icon_hp.png" />
     <None Remove="Texture\UI\logo.png" />
+    <None Remove="Texture\UI\Menu_background.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
@@ -87,6 +88,7 @@
     <Resource Include="Texture\UI\Button\ButtonMenu\SettingsActive.png" />
     <Resource Include="Texture\UI\Game\HP\icon_hp.png" />
     <Resource Include="Texture\UI\logo.png" />
+    <Resource Include="Texture\UI\Menu_background.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
