Поработал над классом Zombie

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -16,6 +16,7 @@
     <None Remove="player_stand.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
+    <None Remove="Texture\Cursor\alternate.ani" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <None Remove="Texture\Mob\Player\player_berserk.png" />
@@ -48,6 +49,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Texture\Cursor\alternate.ani" />
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
   </ItemGroup>
 
