Переработано окно настроек, добавлено окно выбора сложности. От сложности зависит кол-во заспавленных мобов(А также кол-во которое надо победить для победа на уровне) и хп игрока

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -40,6 +40,7 @@
     <None Remove="Texture\UI\Button\ButtonMenu\Settings.png" />
     <None Remove="Texture\UI\Button\ButtonMenu\SettingsActive.png" />
     <None Remove="Texture\UI\Game\HP\icon_hp.png" />
+    <None Remove="Texture\UI\Game\Settings_Background.png" />
     <None Remove="Texture\UI\logo.png" />
     <None Remove="Texture\UI\Menu_background.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png" />
@@ -89,6 +90,7 @@
     <Resource Include="Texture\UI\Button\ButtonMenu\Settings.png" />
     <Resource Include="Texture\UI\Button\ButtonMenu\SettingsActive.png" />
     <Resource Include="Texture\UI\Game\HP\icon_hp.png" />
+    <Resource Include="Texture\UI\Game\Settings_Background.png" />
     <Resource Include="Texture\UI\logo.png" />
     <Resource Include="Texture\UI\Menu_background.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_1.png">
