Последний коммит в этом году

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -30,6 +30,9 @@
     <None Remove="Texture\Mob\Player\player_right.png" />
     <None Remove="Texture\Mob\Player\player_stand.png" />
     <None Remove="Texture\Objects\Furniture\Table.png" />
+    <None Remove="Texture\Objects\Xmas\Xmas_0.png" />
+    <None Remove="Texture\Objects\Xmas\Xmas_1.png" />
+    <None Remove="Texture\Objects\Xmas\Xmas_2.png" />
     <None Remove="Texture\Parallax\MainMenu.png" />
     <None Remove="Texture\Parallax\MainMenuBackground.png" />
     <None Remove="Texture\UI\Button\ButtonMenu\Exit.png" />
@@ -76,6 +79,15 @@
     <Resource Include="Texture\Mob\Player\player_right.png" />
     <Resource Include="Texture\Mob\Player\player_stand.png" />
     <Resource Include="Texture\Objects\Furniture\Table.png" />
+    <Resource Include="Texture\Objects\Xmas\Xmas_0.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Texture\Objects\Xmas\Xmas_1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Texture\Objects\Xmas\Xmas_2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Texture\Parallax\MainMenu.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
