Вот теперь точно последний коммит в году. Всех с нг

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Texture\SplashScreen\**" />
+    <EmbeddedResource Remove="Texture\SplashScreen\**" />
+    <None Remove="Texture\SplashScreen\**" />
+    <Page Remove="Texture\SplashScreen\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="castle_1.jpeg" />
     <None Remove="font\en.ttf" />
     <None Remove="font\Ru.otf" />
@@ -111,10 +118,6 @@
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Texture\SplashScreen\" />
   </ItemGroup>
 
 </Project>
