Начал перемещать логику генерации в класс, убираю много кода из окон в классы, исправил проблему пропажи персонажа со второго окна, добавил оружие "Меч", добавил его анимацию. Вернул прогресс бар хп для зомби, в данный момент он сломан ( ошибка после того как на прогрессбаре 0 value )

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -57,6 +57,11 @@
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
+    <None Remove="Texture\Weapon\Sword\Wave_0.png" />
+    <None Remove="Texture\Weapon\Sword\Wave_1.png" />
+    <None Remove="Texture\Weapon\Sword\Wave_2.png" />
+    <None Remove="Texture\Weapon\Sword\Wave_3.png" />
+    <None Remove="Texture\Weapon\Sword\Wave_4.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -118,6 +123,11 @@
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
+    <Resource Include="Texture\Weapon\Sword\Wave_0.png" />
+    <Resource Include="Texture\Weapon\Sword\Wave_1.png" />
+    <Resource Include="Texture\Weapon\Sword\Wave_2.png" />
+    <Resource Include="Texture\Weapon\Sword\Wave_3.png" />
+    <Resource Include="Texture\Weapon\Sword\Wave_4.png" />
   </ItemGroup>
 
 </Project>
