Исправлена проблема с крашем приложения при хп моба = 0, теперь хп отнимается у каждого отдельного моба правильно. Начал работу над классом темного мага. У каждого оружия индивидуальный урон

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -24,6 +24,7 @@
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
     <None Remove="Texture\Cursor\alternate.ani" />
+    <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <None Remove="Texture\Mob\Player\player_berserk.png" />
@@ -66,6 +67,7 @@
 
   <ItemGroup>
     <Resource Include="Texture\Cursor\alternate.ani" />
+    <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
   </ItemGroup>
 
