--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Sound\SoundPlayerM.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="castle_1.jpeg" />
     <None Remove="font\en.ttf" />
     <None Remove="font\Ru.otf" />
@@ -24,6 +28,7 @@
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
     <None Remove="Texture\Cursor\alternate.ani" />
+    <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteLeft.png" />
     <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
@@ -58,6 +63,10 @@
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
     <None Remove="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
+    <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_1.png" />
+    <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_2.png" />
+    <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_3.png" />
+    <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_4.png" />
     <None Remove="Texture\Weapon\Sword\Wave_0.png" />
     <None Remove="Texture\Weapon\Sword\Wave_1.png" />
     <None Remove="Texture\Weapon\Sword\Wave_2.png" />
@@ -67,6 +76,7 @@
 
   <ItemGroup>
     <Resource Include="Texture\Cursor\alternate.ani" />
+    <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteLeft.png" />
     <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
   </ItemGroup>
@@ -125,6 +135,10 @@
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_2.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_3.png" />
     <Resource Include="Texture\Weapon\Magic\BasicSphere\MagicSphereBasic_4.png" />
+    <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_1.png" />
+    <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_2.png" />
+    <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_3.png" />
+    <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_4.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_0.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_1.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_2.png" />
