Добавил 2-ух боссов - Дракон и Безумный ученый. Пока не проработан Безумный ученый в плане атак. Дракон атакует игрока, ускоряется и быстрее атакуют при его хп ниже 50 ( включает режим берсерка ). Из багов: дракон наносит слишком много урона игроку, его атака выглядит чутка кривовато. Уровни никак не подвязал, зайти на определенный уровень можно только через App.Xaml. Убрал окно выбора сложности и перенес его в главное меню. Убрал окно настроек

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -28,6 +28,12 @@
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
     <None Remove="Texture\Cursor\alternate.ani" />
+    <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftHard.png" />
+    <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftLite.png" />
+    <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_RightHard.png" />
+    <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_RightLite.png" />
+    <None Remove="Texture\Mob\Enemy\Boss\MadScientist\MadScientistLeft.png" />
+    <None Remove="Texture\Mob\Enemy\Boss\MadScientist\MadScientistRight.png" />
     <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteLeft.png" />
     <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
@@ -67,6 +73,10 @@
     <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_2.png" />
     <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_3.png" />
     <None Remove="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_4.png" />
+    <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_1.png" />
+    <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_2.png" />
+    <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_3.png" />
+    <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_4.png" />
     <None Remove="Texture\Weapon\Sword\Wave_0.png" />
     <None Remove="Texture\Weapon\Sword\Wave_1.png" />
     <None Remove="Texture\Weapon\Sword\Wave_2.png" />
@@ -76,6 +86,12 @@
 
   <ItemGroup>
     <Resource Include="Texture\Cursor\alternate.ani" />
+    <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftHard.png" />
+    <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftLite.png" />
+    <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_RightHard.png" />
+    <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_RightLite.png" />
+    <Resource Include="Texture\Mob\Enemy\Boss\MadScientist\MadScientistLeft.png" />
+    <Resource Include="Texture\Mob\Enemy\Boss\MadScientist\MadScientistRight.png" />
     <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteLeft.png" />
     <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
@@ -139,6 +155,10 @@
     <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_2.png" />
     <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_3.png" />
     <Resource Include="Texture\Weapon\Magic\DarkWizardWeapon\Weapon_DarkWizardLite_4.png" />
+    <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_1.png" />
+    <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_2.png" />
+    <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_3.png" />
+    <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_4.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_0.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_1.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_2.png" />
