--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -48,6 +48,9 @@
     <None Remove="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
     <None Remove="Texture\Mob\Player\player_right.png" />
     <None Remove="Texture\Mob\Player\player_stand.png" />
+    <None Remove="Texture\Objects\Door.png" />
+    <None Remove="Texture\Objects\Door_Left.png" />
+    <None Remove="Texture\Objects\Door_Right.png" />
     <None Remove="Texture\Objects\Furniture\Table.png" />
     <None Remove="Texture\Objects\Xmas\Xmas_0.png" />
     <None Remove="Texture\Objects\Xmas\Xmas_1.png" />
@@ -77,6 +80,9 @@
     <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_2.png" />
     <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_3.png" />
     <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_4.png" />
+    <None Remove="Texture\Weapon\Magic\MadScientistBulb\MadScientist_1.png" />
+    <None Remove="Texture\Weapon\Magic\MadScientistBulb\MadScientist_2.png" />
+    <None Remove="Texture\Weapon\Magic\MadScientistBulb\MadScientist_3.png" />
     <None Remove="Texture\Weapon\Sword\Wave_0.png" />
     <None Remove="Texture\Weapon\Sword\Wave_1.png" />
     <None Remove="Texture\Weapon\Sword\Wave_2.png" />
@@ -118,6 +124,9 @@
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation2.png" />
     <Resource Include="Texture\Mob\Player\player_right.png" />
     <Resource Include="Texture\Mob\Player\player_stand.png" />
+    <Resource Include="Texture\Objects\Door.png" />
+    <Resource Include="Texture\Objects\Door_Left.png" />
+    <Resource Include="Texture\Objects\Door_Right.png" />
     <Resource Include="Texture\Objects\Furniture\Table.png" />
     <Resource Include="Texture\Objects\Xmas\Xmas_0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -159,6 +168,9 @@
     <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_2.png" />
     <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_3.png" />
     <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_4.png" />
+    <Resource Include="Texture\Weapon\Magic\MadScientistBulb\MadScientist_1.png" />
+    <Resource Include="Texture\Weapon\Magic\MadScientistBulb\MadScientist_2.png" />
+    <Resource Include="Texture\Weapon\Magic\MadScientistBulb\MadScientist_3.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_0.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_1.png" />
     <Resource Include="Texture\Weapon\Sword\Wave_2.png" />
