HP игрока прибавляетс за каждое кол-во побежденных мобов(Зависит от сложности). Уровни случайным образом выбираются правильно. Добавил манну. Манна тратится, если манна на 0, то появляется на карте новая.

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -27,6 +27,9 @@
     <None Remove="player_stand.png" />
     <None Remove="Sound\Music\MainMenuTheme.wav" />
     <None Remove="Texture\background\Level\game_background_1.png" />
+    <None Remove="Texture\background\Level\game_background_2.png" />
+    <None Remove="Texture\background\Level\game_background_3.png" />
+    <None Remove="Texture\background\Level\game_background_4.png" />
     <None Remove="Texture\Cursor\alternate.ani" />
     <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftHard.png" />
     <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftLite.png" />
@@ -91,6 +94,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Texture\background\Level\game_background_2.png" />
+    <Resource Include="Texture\background\Level\game_background_3.png" />
+    <Resource Include="Texture\background\Level\game_background_4.png" />
     <Resource Include="Texture\Cursor\alternate.ani" />
     <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftHard.png" />
     <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftLite.png" />
