Добавил сундук, который появляется каждый раз на окне, при нажатии кнопки F происходит случайное действие ( может быть и вычетание хп и прибавление )

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -51,6 +51,7 @@
     <None Remove="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
     <None Remove="Texture\Mob\Player\player_right.png" />
     <None Remove="Texture\Mob\Player\player_stand.png" />
+    <None Remove="Texture\Objects\Chest.png" />
     <None Remove="Texture\Objects\Door.png" />
     <None Remove="Texture\Objects\Door_Left.png" />
     <None Remove="Texture\Objects\Door_Right.png" />
@@ -130,6 +131,7 @@
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation2.png" />
     <Resource Include="Texture\Mob\Player\player_right.png" />
     <Resource Include="Texture\Mob\Player\player_stand.png" />
+    <Resource Include="Texture\Objects\Chest.png" />
     <Resource Include="Texture\Objects\Door.png" />
     <Resource Include="Texture\Objects\Door_Left.png" />
     <Resource Include="Texture\Objects\Door_Right.png" />
