Добавил класс собаки, скелета, добавил случайное появление разных мобов на окне.

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -39,6 +39,10 @@
     <None Remove="Texture\Mob\Enemy\Boss\MadScientist\MadScientistRight.png" />
     <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteLeft.png" />
     <None Remove="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
+    <None Remove="Texture\Mob\Enemy\Dog\dog_Left.png" />
+    <None Remove="Texture\Mob\Enemy\Dog\dog_Right.png" />
+    <None Remove="Texture\Mob\Enemy\Skeleton\Skeleton_Left.png" />
+    <None Remove="Texture\Mob\Enemy\Skeleton\Skeleton_Right.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_left.png" />
     <None Remove="Texture\Mob\Enemy\Zombie\zombie_right.png" />
     <None Remove="Texture\Mob\Player\player_berserk.png" />
@@ -107,6 +111,10 @@
     <Resource Include="Texture\Mob\Enemy\Boss\MadScientist\MadScientistRight.png" />
     <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteLeft.png" />
     <Resource Include="Texture\Mob\Enemy\DarkWizard\darkWizardLiteRight.png" />
+    <Resource Include="Texture\Mob\Enemy\Dog\dog_Left.png" />
+    <Resource Include="Texture\Mob\Enemy\Dog\dog_Right.png" />
+    <Resource Include="Texture\Mob\Enemy\Skeleton\Skeleton_Left.png" />
+    <Resource Include="Texture\Mob\Enemy\Skeleton\Skeleton_Right.png" />
     <Resource Include="Texture\Mob\Player\player_move_animation\Right\PlayerMoveRightAnimation3.png" />
   </ItemGroup>
 
