Игра доделана, осталось добавить текстуры принцессы и предметов. Доделаны боссы ( Дракон и Безумный ученый ). Добавил окно выигрыша. И очень много изменений в окнах ( мне лень много писать  )

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -30,6 +30,7 @@
     <None Remove="Texture\background\Level\game_background_2.png" />
     <None Remove="Texture\background\Level\game_background_3.png" />
     <None Remove="Texture\background\Level\game_background_4.png" />
+    <None Remove="Texture\background\Lose_Game.png" />
     <None Remove="Texture\Cursor\alternate.ani" />
     <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftHard.png" />
     <None Remove="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftLite.png" />
@@ -59,7 +60,10 @@
     <None Remove="Texture\Objects\Door.png" />
     <None Remove="Texture\Objects\Door_Left.png" />
     <None Remove="Texture\Objects\Door_Right.png" />
+    <None Remove="Texture\Objects\Dragon_Door.png" />
     <None Remove="Texture\Objects\Furniture\Table.png" />
+    <None Remove="Texture\Objects\Smart_Door.png" />
+    <None Remove="Texture\Objects\Star.png" />
     <None Remove="Texture\Objects\Xmas\Xmas_0.png" />
     <None Remove="Texture\Objects\Xmas\Xmas_1.png" />
     <None Remove="Texture\Objects\Xmas\Xmas_2.png" />
@@ -88,6 +92,7 @@
     <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_2.png" />
     <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_3.png" />
     <None Remove="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_4.png" />
+    <None Remove="Texture\Weapon\Magic\DragonWeapon\Fire_Dragon.png" />
     <None Remove="Texture\Weapon\Magic\MadScientistBulb\MadScientist_1.png" />
     <None Remove="Texture\Weapon\Magic\MadScientistBulb\MadScientist_2.png" />
     <None Remove="Texture\Weapon\Magic\MadScientistBulb\MadScientist_3.png" />
@@ -102,6 +107,7 @@
     <Resource Include="Texture\background\Level\game_background_2.png" />
     <Resource Include="Texture\background\Level\game_background_3.png" />
     <Resource Include="Texture\background\Level\game_background_4.png" />
+    <Resource Include="Texture\background\Lose_Game.png" />
     <Resource Include="Texture\Cursor\alternate.ani" />
     <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftHard.png" />
     <Resource Include="Texture\Mob\Enemy\Boss\Dragon\Dragon_LeftLite.png" />
@@ -143,7 +149,10 @@
     <Resource Include="Texture\Objects\Door.png" />
     <Resource Include="Texture\Objects\Door_Left.png" />
     <Resource Include="Texture\Objects\Door_Right.png" />
+    <Resource Include="Texture\Objects\Dragon_Door.png" />
     <Resource Include="Texture\Objects\Furniture\Table.png" />
+    <Resource Include="Texture\Objects\Smart_Door.png" />
+    <Resource Include="Texture\Objects\Star.png" />
     <Resource Include="Texture\Objects\Xmas\Xmas_0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -184,6 +193,7 @@
     <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_2.png" />
     <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_3.png" />
     <Resource Include="Texture\Weapon\Magic\DragonWeapon\Attack_Dragon_4.png" />
+    <Resource Include="Texture\Weapon\Magic\DragonWeapon\Fire_Dragon.png" />
     <Resource Include="Texture\Weapon\Magic\MadScientistBulb\MadScientist_1.png" />
     <Resource Include="Texture\Weapon\Magic\MadScientistBulb\MadScientist_2.png" />
     <Resource Include="Texture\Weapon\Magic\MadScientistBulb\MadScientist_3.png" />
