Добавил комментарии ко всем ключевым классам, добавил генерируемых 5 объектов, принцесса стала принцессой. Последний коммит

--- a/Secret of Castle/Secret of Castle.csproj
+++ b/Secret of Castle/Secret of Castle.csproj
@@ -61,7 +61,12 @@
     <None Remove="Texture\Objects\Door_Left.png" />
     <None Remove="Texture\Objects\Door_Right.png" />
     <None Remove="Texture\Objects\Dragon_Door.png" />
+    <None Remove="Texture\Objects\Furniture\Chair.png" />
+    <None Remove="Texture\Objects\Furniture\Net.png" />
     <None Remove="Texture\Objects\Furniture\Table.png" />
+    <None Remove="Texture\Objects\Furniture\Torch_blue.png" />
+    <None Remove="Texture\Objects\Furniture\Torch_red.png" />
+    <None Remove="Texture\Objects\Princess.png" />
     <None Remove="Texture\Objects\Smart_Door.png" />
     <None Remove="Texture\Objects\Star.png" />
     <None Remove="Texture\Objects\Xmas\Xmas_0.png" />
@@ -150,7 +155,12 @@
     <Resource Include="Texture\Objects\Door_Left.png" />
     <Resource Include="Texture\Objects\Door_Right.png" />
     <Resource Include="Texture\Objects\Dragon_Door.png" />
+    <Resource Include="Texture\Objects\Furniture\Chair.png" />
+    <Resource Include="Texture\Objects\Furniture\Net.png" />
     <Resource Include="Texture\Objects\Furniture\Table.png" />
+    <Resource Include="Texture\Objects\Furniture\Torch_blue.png" />
+    <Resource Include="Texture\Objects\Furniture\Torch_red.png" />
+    <Resource Include="Texture\Objects\Princess.png" />
     <Resource Include="Texture\Objects\Smart_Door.png" />
     <Resource Include="Texture\Objects\Star.png" />
     <Resource Include="Texture\Objects\Xmas\Xmas_0.png">
